# iced_discord

./: Cargo.toml
src/: main.rs
src/commands/: autocomplete.rs  checks.rs  general.rs  localization.rs  mod.rs  subcommands.rs
