[package]
edition = "2021"
name = "slavebot_mk2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.1"
futures = {version = "0.3.13", default-features = false}

[dependencies.poise]
features = []
version = "0.5.1"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.0"
